--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
