--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@ionic/react-router": "^7.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "html-react-parser": "^4.0.0",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-markdown": "^8.0.7",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
