--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-markdown": "^8.0.7",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "rehype-highlight": "^6.0.0",
+    "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
