--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.1.1",
     "@capacitor/android": "^5.0.4",
     "@capacitor/app": "5.0.2",
     "@capacitor/core": "5.0.4",
