--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.1.1",
     "@capacitor/android": "^5.0.4",
-    "@capacitor/app": "5.0.2",
+    "@capacitor/app": "^5.0.2",
+    "@capacitor/browser": "^5.0.5",
     "@capacitor/core": "5.0.4",
     "@capacitor/haptics": "^5.0.2",
     "@capacitor/ios": "5.0.4",
