Removed multiple route outlets and used IonViewWillEnter and IonViewWill Leave to hide/show bars

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@capacitor/ios": "5.0.4",
     "@capacitor/keyboard": "5.0.2",
     "@capacitor/status-bar": "5.0.2",
-    "@ionic/react": "^7.0.0",
-    "@ionic/react-router": "^7.0.0",
+    "@ionic/react": "^7.1.1",
+    "@ionic/react-router": "^7.1.1",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "html-react-parser": "^4.0.0",
@@ -35,7 +35,8 @@
     "react-router-dom": "^5.3.4",
     "rehype-highlight": "^6.0.0",
     "rehype-raw": "^6.1.1",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "swiper": "^10.0.3"
   },
   "devDependencies": {
     "@capacitor/cli": "5.0.4",
