--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/haptics": "^5.0.2",
     "@capacitor/ios": "5.0.4",
     "@capacitor/keyboard": "5.0.2",
+    "@capacitor/push-notifications": "^5.0.6",
     "@capacitor/status-bar": "5.0.2",
     "@ionic/react": "^7.1.1",
     "@ionic/react-router": "^7.1.1",
