Add a maple tree Icon and change applicationId for android

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
+    "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "5.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
