--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/keyboard": "5.0.2",
     "@capacitor/push-notifications": "^5.0.6",
     "@capacitor/status-bar": "5.0.2",
+    "@capacitor/toast": "^5.0.6",
     "@ionic/react": "^7.1.1",
     "@ionic/react-router": "^7.1.1",
     "@types/react-router": "^5.1.20",
