--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.1.1",
     "@capacitor/android": "^5.0.4",
-    "@capacitor/app": "^5.0.2",
+    "@capacitor/app": "^5.0.6",
     "@capacitor/browser": "^5.0.5",
     "@capacitor/core": "5.0.4",
-    "@capacitor/haptics": "^5.0.2",
+    "@capacitor/haptics": "^5.0.6",
     "@capacitor/ios": "5.0.4",
-    "@capacitor/keyboard": "5.0.2",
+    "@capacitor/keyboard": "^5.0.2",
     "@capacitor/push-notifications": "^5.0.6",
-    "@capacitor/status-bar": "5.0.2",
+    "@capacitor/status-bar": "^5.0.2",
     "@capacitor/toast": "^5.0.6",
     "@ionic/react": "^7.1.1",
     "@ionic/react-router": "^7.1.1",
