--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/react-router": "^7.1.1",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "cordova-plugin-ionic": "5.5.3",
     "html-react-parser": "^4.0.0",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
