--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Space-Repetition",
+  "name": "Spaced-Repetition",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -25,6 +25,7 @@
     "@capacitor/toast": "^5.0.6",
     "@ionic/react": "^7.1.1",
     "@ionic/react-router": "^7.1.1",
+    "@preact/signals-react": "^1.3.8",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "cordova-plugin-ionic": "5.5.3",
