--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.1.1",
-    "@capacitor/android": "^5.0.4",
+    "@capacitor/android": "5.0.4",
     "@capacitor/app": "^5.0.6",
     "@capacitor/browser": "^5.0.5",
     "@capacitor/core": "5.0.4",
